템플릿 상속 및 filesystem loader 추가하고, debug toolbar 설치 및 셋팅

--- a/example/templates/example/layout.html
+++ b/example/templates/example/layout.html
@@ -1,10 +1,6 @@
-<html>
-<head>
-    <title>django 기본편 -review</title>
-</head>
-<body>
+{% extends 'layout.html' %}
+{% block contents %}
     <h1>askdjango review</h1>
     <h2> {{ name }}</h2>
     <p> i can do it!</p>
-</body>
-</html>
+{% endblock %}
