--- a/review/templates/layout.html
+++ b/review/templates/layout.html
@@ -3,6 +3,14 @@
     <title>askdjango-review</title>
 </head>
 <body>
+    <h1>Ask Django 리뷰 - 여행 블로그 만들기</h1>
+    {% if user.is_authenticated %}
+        <h3>프로필</h3>
+        <h3>로그아웃</h3>
+    {% else %}
+        <h3>로그인</h3>
+        <h3>회원가입</h3>
+    {% endif %}
     {% block contents %}
     {% endblock %}
 </body>
