comments 모델만들어서 post랑 1:n relation field 만들기

--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -8,4 +8,9 @@
         <h4>태그: {{ post.tags }}</h4>
         <h4>위치: {{ post.lnglat }}</h4>
     </table>
+    <h3>Post Comments</h3>
+    {% for comment in comments %}
+        <h5>{{ comment.author }}</h5>
+        <p>{{ comment.message }}</p>
+    {% endfor %}
 {% endblock %}
