post_edit 화면 구현

--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -4,9 +4,9 @@
     <H2>Post Detail</H2>
     <table>
         <h2> {{ post.title }}</h2>
-        <h4>작가 {{ post.author }}</h4>
-        <p>내용 {{ post.content |linebreaks }}</p>
+        <p>{{ post.content |linebreaks }}</p>
         <h4>태그: {{ post.tags }}</h4>
+        <h4>written by {{ post.author }}</h4>
         <h4>위치: {{ post.lnglat }}</h4>
     </table>
     <hr/>
