django bootstrap 설치하고, 적용하기

--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -2,7 +2,7 @@
 {% block contents %}
     <hr/>
     <H2>Post Detail</H2>
-    <table>
+    <table class="table-bordered">
         <h2> {{ post.title }}</h2>
         <p>{{ post.content |linebreaks }}</p>
         <h4>태그: {{ post.tags }}</h4>
