--- a/review/templates/layout.html
+++ b/review/templates/layout.html
@@ -1,6 +1,21 @@
+{% load bootstrap3 %}
+{% bootstrap_css %}
+{% bootstrap_javascript %}
 <html>
 <head>
     <title>askdjango-review</title>
+    <style>
+        html { position: relative; min-height: 100%; }
+        body { margin-bottom: 60px;margin-left: 60px; }
+        #page-footer {
+            position: absolute;
+            bottom: 0;
+            width: 100%;
+            height: 60px;
+            line-height: 60px;
+            background-color: #f5f5f5;
+    }
+    </style>
 </head>
 <body>
     <h1><a href="{% url 'blog:post_list' %}">Ask Django 리뷰 - 여행 블로그 만들기</a></h1>
