--- a/review/templates/layout.html
+++ b/review/templates/layout.html
@@ -26,6 +26,15 @@
         <h3>로그인</h3>
         <h3>회원가입</h3>
     {% endif %}
+    {% if messages %}
+    <ul class="messages">
+        {% for message in messages %}
+            <li {% if message.tags %} class="alert alert-{{ message.tags }}"{% endif %}>
+                {{ message.message }}
+            </li>
+        {% endfor %}
+    </ul>
+    {% endif %}
     {% block contents %}
     {% endblock %}
     <hr/>
