--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -1,9 +1,12 @@
 {% extends 'layout.html' %}
 {% block contents %}
-    <hr/>
+    <hr xmlns="http://www.w3.org/1999/html"/>
     <H2>Post Detail</H2>
     <table class="table-bordered">
         <h2> {{ post.title }}</h2>
+        {% if post.photo_thumbnail %}
+        <img src="{{ post.photo_thumbnail.url }}"/></image>
+        {% endif %}
         <p>{{ post.content |linebreaks }}</p>
         <h4>태그: {{ post.tags }}</h4>
         <h4>written by {{ post.author }}</h4>
