--- a/accounts/templates/accounts/signup_form.html
+++ b/accounts/templates/accounts/signup_form.html
@@ -1,6 +1,7 @@
 {% extends 'layout.html' %}
 {% block contents %}
-    <form action="" method="POST" enctype="multipart/form-data">
+    <form action="" method="POST" enctype="multipart/form-data" class="table-bordered">
+    {% csrf_token %}
     <h2>회원가입</h2>
         {{ form.as_p }}
     <input type="submit" class="btn-primary" >
