--- a/accounts/templates/accounts/profile.html
+++ b/accounts/templates/accounts/profile.html
@@ -1,5 +1,5 @@
 {% extends 'layout.html' %}
 {% block contents %}
-    <h2>{{ profile.user.username }}님의 프로필</h2>
-    <img src="{% url profile.user.profile_photo.url %}">
+    <h2>{{ profile.username }}님의 프로필</h2>
+    <img src="{{ profile.profile_photo.url }}">
 {% endblock %}
